catalog controller added and working
